A few commits late really: Managed to get the grid display function into a module (with the help of Nhan), created a factory for the players that works fairly well, started working on the module for the flow of the game.  Can I share module prototypes between the board and flow?  How can I access the gameboard more easily for the flow module?

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>TicTacToe</title>
 </head>
 <body>
+    <div class="body">
     <div class="container">
         <div class="grid"></div>
         <div class="grid"></div>
@@ -19,5 +20,7 @@
         <div class="grid"></div>
         <div class="grid"></div>
     </div>
+    <div class="info"></div>
+</div>
 </body>
 </html>
