Added some code that displays the  board, places the markings, and shows whose turn is next.  Need to add buttons that restart the game, text that displays the winner, etc.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,8 @@
 </head>
 <body>
     <div class="body">
-    <div class="container">
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
+        <div class="container"></div>
+        <div class="info"></div>
     </div>
-    <div class="info"></div>
-</div>
 </body>
 </html>
