Game functions in the DOM with a win message, error for picking a chosen location, but it needs a start/restart button and finish the form to input the player's names.  Some website design as well.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,29 @@
     <script src="script.js" defer></script>
     <title>TicTacToe</title>
 </head>
+
 <body>
     <div class="body">
         <div class="container"></div>
-        <div class="info"></div>
+        <div class="info">
+            <div class="prompt"></div>
+            <div class="form">
+                <form action="" method="post">
+                    <div class="firstplayer">
+                        <label for="player_one">Player One's Name:</label>
+                        <input type="text" id="player_one" name="player_one">
+                    </div>
+                    <div class="secondplayer">
+                        <label for="player_two">Player Two's Name:</label>
+                        <input typee="text" id="player_two" name="player_two">
+                    </div>
+                    <div class="formsubmit">
+                        <button class="submit" type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
