The form properly accepts players' names and displays them throughout the game.  If they choose not to submit a name, it will default to Player 1 & 2.  Start game button starts the game.  I need a restart button and game variations

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <input typee="text" id="player_two" name="player_two">
                     </div>
                     <div class="formsubmit">
-                        <button class="submit" type="submit">Submit</button>
+                        <button class="submit" type="submit">Start Game</button>
                     </div>
                 </form>
             </div>
