The game works without complaints from the console.  It seems free from bugs.  It could use some design improvements as well.  It would be good to get feedback on the code itself.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="body">
         <div class="container"></div>
         <div class="info">
-            <div class="prompt"></div>
+            <div class="prompt">
+
+            </div>
             <div class="form">
                 <form action="" method="post">
                     <div class="firstplayer">
@@ -24,7 +26,7 @@
                         <label for="player_two">Player Two's Name:</label>
                         <input typee="text" id="player_two" name="player_two">
                     </div>
-                    <div class="formsubmit">
+                    <div class="formsubmit"> 
                         <button class="submit" type="submit">Start Game</button>
                     </div>
                 </form>
